<resources>
    <string name="app_name_wm">文明实践</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="sure">确定</string>
    <string name="again">下一步</string>
    <string name="complete">完成</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="cs_evaluation">评价</string>
    <string name="cs_evaluate_problem_title">存在哪些问题</string>
    <string name="cs_evaluate_select_must">必选</string>
    <string name="add_friend">添加好友</string>
    <string name="choose_friend">选择联系人</string>
    <string name="create_group">创建群组</string>
    <string name="cancel">取消</string>
    <string name="create_schedule">新建日程</string>
    <string name="create_weekly">新建周报</string>
    <string name="loading_text">加载中</string>
    <string name="service_time">服务时长</string>
    <string name="time_enter">时长录入</string>
    <string name="search">搜索</string>
    <string name="search_number">请输入手机号</string>
    <string name="phone_number">手机号</string>
    <string name="new_phone_number">新的手机号</string>
    <string name="please_new_phone_number">请输入新绑定手机号</string>
    <string name="search_content">快速搜索聊天内容</string>
    <string name="search_pic">图片</string>
    <string name="search_file">文件</string>
    <string name="search_link">链接</string>
    <string name="no_friends">暂无好友</string>
    <string name="group_name">群聊名称</string>
    <string name="search_chat_history">查找聊天记录</string>
    <string name="close_chat">消息免打扰</string>
    <string name="chat_first">会话置顶</string>
    <string name="clear_chat_history">清除聊天记录</string>
    <string name="delete_exit">删除并退出</string>
    <string name="delete">删除</string>
    <string name="set_translate">设置备注</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="contacts">通讯录</string>
    <string name="group_detail">群组详情</string>
    <string name="chat_detail">聊天详情</string>
    <string name="detail">详情</string>
    <string name="add_schedule_title">添加日程标题</string>
    <string name="all_day">全天</string>
    <string name="schedule_desc">日程描述</string>
    <string name="schedule_location">日程地点</string>
    <string name="schedule_project">关联项目</string>
    <string name="schedule_product">关联产品</string>
    <string name="schedule_people">关联用户</string>
    <string name="schedule_task">关联任务</string>
    <string name="location">地点</string>
    <string name="project">项目</string>
    <string name="product">产品</string>
    <string name="people">用户</string>
    <string name="task">任务</string>
    <string name="weekly_title">周报标题</string>
    <string name="weekly_result">主要成果和总结</string>
    <string name="weekly_feedback">反馈</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="password_again">重复密码</string>
    <string name="no_account">没有账号？立即注册</string>
    <string name="password_number">请输入密码</string>
    <string name="password_forget">忘记密码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="check_code">验证码</string>
    <string name="input_check_code">请输入收到的验证码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_password_agin">请再次输入新密码</string>
    <string name="register">注册</string>
    <string name="input">提交</string>
    <string name="register_agree">我已阅读并同意《注册协议》</string>
    <string name="exit_login">退出登录</string>
    <string name="version_code">版本号</string>
    <string name="clear_cache">清除缓存</string>
    <string name="set_password">密码设置</string>
    <string name="mine">个人中心</string>
    <string name="news_activity">最新活动</string>
    <string name="all">全部</string>
    <string name="search_activity">请输入活动名称</string>
    <string name="search_location">搜索地点</string>
    <string name="service_duration">服务总时长</string>
    <string name="member_num">成员数</string>
    <string name="create_time">成立时间</string>
    <string name="station_activity">查看活动(%1$s)</string>
    <string name="station_introduction">查看简介</string>
    <string name="take_photo">发布照片</string>
    <string name="take_video">发布视频</string>
    <string name="publish">发布</string>
    <string name="say">说点什么呢</string>
    <string name="input_text">请输入文字...</string>
    <string name="please_location">请定位</string>
    <string name="no_file">文件不能为空！</string>
    <string name="no_title">标题不能为空！</string>
    <string name="no_content">内容不能为空！</string>
    <string name="recruit_time">招募时间</string>
    <string name="activity_time">活动时间</string>
    <string name="activity_place">活动地点</string>
    <string name="service_type">服务类别</string>
    <string name="service_object">服务对象</string>
    <string name="initiating_organization">发起组织</string>
    <string name="contacts_people">联系人</string>
    <string name="contacts_phone">联系电话</string>
    <string name="number_of_applicants">参与人数</string>
    <string name="number_of_sign">报名人数</string>
    <string name="activity_pic">活动图片</string>
    <string name="activity_report">活动报道</string>
    <string name="sign_up">立即报名</string>
    <string name="sign_up_over">报名已结束</string>
    <string name="activity_over">活动已结束</string>
    <string name="activity_going">活动进行中</string>
    <string name="activity_before">招募未开始</string>
    <string name="activity_number">招募人数</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_introduce">活动简介</string>
    <string name="base_message">基本信息</string>
    <string name="leader_message">负责人信息</string>
    <string name="leader">负责人</string>
    <string name="organize_activity">组织活动</string>
    <string name="organize_profile">组织简介</string>
    <string name="organize_detail">组织详情</string>
    <string name="join_organize">加入组织</string>
    <string name="apply_for_registration">申请挂靠</string>
    <string name="registration_wait">已申请挂靠，请等待审核</string>
    <string name="join_wait">已申请，请等待审核</string>
    <string name="volunteer_login">志愿者登录</string>
    <string name="org_login">志愿组织登录</string>
    <string name="volunteer_register">志愿者注册</string>
    <string name="org_register">组织注册</string>
    <string name="register_detail">注册信息</string>
    <string name="find_password">找回身份</string>
    <string name="account_null">请输入账号</string>
    <string name="phone_null">请输入手机号</string>
    <string name="card_null">请输入身份证号</string>
    <string name="card_true">请输入正确的身份证号</string>
    <string name="name_null">请输入姓名</string>
    <string name="password_null">请输入密码</string>
    <string name="password_length">密码不能少于六位数</string>
    <string name="password_null_again">请再次输入密码</string>
    <string name="password_no_same">两次输入的密码不一致</string>
    <string name="password_no_number">密码长度不少于六位，包含数字、字母、符号中至少两种</string>
    <string name="choose_account">请选择账户</string>
    <string name="read_null">请阅读注册协议</string>
    <string name="code_null">请输入验证码</string>
    <string name="star_level">星级等级</string>
    <string name="my_activity">我的活动</string>
    <string name="my_org">我的组织</string>
    <string name="my_take_photo">我的随手拍</string>
    <string name="service_records">服务记录</string>
    <string name="check_in_card">打卡签到</string>
    <string name="check_card_location">定位</string>
    <string name="system_message">系统通知</string>
    <string name="account_security">账号安全</string>
    <string name="safe_exit">安全退出</string>
    <string name="perfecting_organizational_information">下一步，完善组织信息</string>
    <string name="perfecting_vol_information">下一步，完善志愿者信息</string>
    <string name="perfect_information">去完善信息</string>
    <string name="pwd_success">密码设置成功!</string>
    <string name="next">下一步</string>
    <string name="register_again">以上账户都不是，我要重新注册</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="document_type">证件类型</string>
    <string name="document_number">证件号码</string>
    <string name="birth_data">出生年月</string>
    <string name="political_appearance">政治面貌</string>
    <string name="country">国家</string>
    <string name="nation">民族</string>
    <string name="navigation">导航</string>
    <string name="degree_of_education">文化程度</string>
    <string name="tel_number">手机号码</string>
    <string name="competent_organization">主管组织</string>
    <string name="personal_skills">个人技能</string>
    <string name="volunteer_type">志愿者类别</string>
    <string name="volunteer_account">志愿者账号</string>
    <string name="intentional_service_time">意向服务时间</string>
    <string name="intentional_service_object">意向服务对象</string>
    <string name="intentional_service_areas">意向服务领域</string>
    <string name="identity_card">身份证</string>
    <string name="identity_card_number">身份证号</string>
    <string name="input_identity_card">请输入身份证号</string>
    <string name="set_identity_card">请输入证件号码</string>
    <string name="no_find">您的信息未在系统中找到匹配对象</string>
    <string name="reregister_or_sure">请确认身份证号是否正确或者重新注册!</string>
    <string name="find_success">您注册的手机号下已有关联账户</string>
    <string name="claim">请选择认领，完成帐户去重!</string>
    <string name="back_check">返回核对证件号</string>
    <string name="to_register">去注册</string>
    <string name="claim_account">认领账户</string>
    <string name="area">所属区域</string>
    <string name="delete_info">选中账户后，其他账户信息将会被删除</string>
    <string name="delete_message">其他账户信息将会被删除,谨慎操作！</string>
    <string name="please_check">请您确认无误，谨慎操作！</string>
    <string name="wait">再考虑一下!</string>
    <string name="sure_to_set">确认，去设置密码</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="please_choose">请选择</string>
    <string name="street">街道</string>
    <string name="community">社区</string>
    <string name="wait_and_sign">等待审核|取消报名</string>
    <string name="pass_and_sign">报名成功|取消报名</string>
    <string name="service_detail">服务详情</string>
    <string name="check_in">签到</string>
    <string name="check_out">签出</string>
    <string name="sure_to_cancel">确定取消报名？</string>
    <string name="sure_to_delete">确定要删除吗？</string>
    <string name="tips">提示</string>
    <string name="activity_name">活动名称</string>
    <string name="my_service_time">服务时间</string>
    <string name="service_long">服务时长(h)</string>
    <string name="sign_in_time">签到时间</string>
    <string name="sign_out_time">签出时间</string>
    <string name="this_time">本次时长(h)</string>
    <string name="service_state">状态</string>
    <string name="change_tel">修改手机号</string>
    <string name="edit_tel">更换手机号</string>
    <string name="change_pwd">修改密码</string>
    <string name="bind_tel">已绑定手机号</string>
    <string name="bind_tel_detail">更换手机号后，下次登录可使用新手机号登录,。手机号作为您身份
验证的重要方式，请谨慎操作！</string>
    <string name="change_pwd_detail">设置新的登录密码</string>
    <string name="change_tel_detail">更换手机号后，下次登录可使用新手机号登录</string>
    <string name="publish_activity">发布活动</string>
    <string name="manage_activity">活动管理</string>
    <string name="manage_member">成员管理</string>
    <string name="manage_org">组织挂靠</string>
    <string name="sure_to_login">是否去登录？</string>
    <string name="sure_to_applay">是否确定申请挂靠？</string>
    <string name="login_org">登录组织账号，将会退出志愿者账号？</string>
    <string name="login_vol">登录志愿者账号，将会退出组织账号？</string>
    <string name="vol_message">信息仅用于志愿组织注册，确保您的信息安全</string>
    <string name="org_name">组织中文名</string>
    <string name="org_service_area">服务领域</string>
    <string name="org_act_object">活动对象</string>
    <string name="org_type">组织类型</string>
    <string name="org_unit_nature">单位性质</string>
    <string name="org_contacts">联系人</string>
    <string name="org_contacts_tel">联系人电话</string>
    <string name="org_create_time">成立时间</string>
    <string name="org_location">详细地址</string>
    <string name="org_detail">组织简介</string>
    <string name="org_area">所属区域</string>
    <string name="input_search">请输入搜索关键字</string>
    <string name="supple_time">批量录入时长</string>
    <string name="choose">全选/全不选</string>
</resources>