<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/new_phone_number"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_new_phone_number"
            android:textColorHint="@color/text_hint_gray"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/tv_obtain_code"
            android:layout_width="@dimen/dp_82"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center"
            android:background="@drawable/shape_corner_white"
            android:gravity="center"
            android:text="@string/obtain_code"
            android:textColor="@color/text_hint_gray"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@color/cursor_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/check_code"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_15" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@null"
        android:hint="@string/input_check_code"
        android:textColorHint="@color/text_hint_gray"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@color/cursor_color" />

    <TextView
        android:id="@+id/tv_next_perfecting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@drawable/login_shape_corner"
        android:gravity="center"
        android:text="@string/input"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

</LinearLayout>