<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<include-->
        <!--android:id="@+id/actionBar"-->
        <!--layout="@layout/action_bar_white" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_160"
            android:scaleType="fitXY"
            android:src="@mipmap/login_background" />

        <ImageView
            android:layout_width="@dimen/dp_95"
            android:layout_height="@dimen/dp_95"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@mipmap/zhi_default" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/volunteer_login"
        android:textColor="@color/home_model"
        android:textSize="@dimen/sp_19" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@mipmap/login_tel" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@null"
            android:hint="@string/search_number"
            android:textColorHint="@color/text_hint_gray"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:background="@color/cursor_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_12"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@mipmap/login_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_25"
            android:background="@null"
            android:hint="@string/password_number"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_gray"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:background="@color/cursor_color" />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/login_shape_corner"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_21" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_26"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/volunteer_register"
            android:textColor="@color/login_gray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password_forget"
            android:textColor="@color/login_gray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_find"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_password"
            android:textColor="@color/login_gray"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>