<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_35"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/activity_name"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/area"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/activity_name"
            android:textColor="@color/password_forget"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_1"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/my_service_time"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_long"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_1"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/service_long"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/sp_13" />
</LinearLayout>