<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_white" />

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:background="@color/tv_location"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/activity_bottom"
            android:text="@string/choose"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_41"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/input_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smartRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_45">

            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15">

            </android.support.v7.widget.RecyclerView>

            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <TextView
            android:id="@+id/tv_employ_member"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/tab_select"
            android:gravity="center"
            android:text="@string/supple_time"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/ll_employ_member"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_45"
                android:layout_weight="1"
                android:background="@color/tv_location"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_45"
                android:layout_weight="1"
                android:background="@color/tab_select"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17" />


        </LinearLayout>
    </RelativeLayout>


</LinearLayout>