<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/action_bar_white" />

    <RelativeLayout
        android:id="@+id/rl_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_26">

        <ImageView
            android:id="@+id/iv_tel"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:src="@mipmap/change_tel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_toRightOf="@+id/iv_tel"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_tel"
                android:textColor="@color/home_model"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_11"
                android:text="@string/change_tel_detail"
                android:textColor="@color/password_forget"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_15"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_menu" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginRight="@dimen/dp_26"
        android:background="@color/under_line" />


    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_26">

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:src="@mipmap/change_pwd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_toRightOf="@+id/iv_pwd"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pwd"
                android:textColor="@color/home_model"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_11"
                android:text="@string/change_pwd_detail"
                android:textColor="@color/password_forget"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_15"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right_menu" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_26"
        android:layout_marginRight="@dimen/dp_26"
        android:background="@color/under_line" />
</LinearLayout>